# peeksta

./: .gitignore  README.md  dev_server_output.txt  index.html  package-lock.json  package.json
.github/workflows/: pre-release.yml
public/: robots.txt  sitemap.xml
src/: App.css  App.jsx  index.css  main.jsx  materialTheme.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: DragOverlay.jsx  Header.jsx  UploadArea.jsx  UserList.jsx
src/components/ads/: AdsTopicsPanel.jsx
src/components/apps/: ActiveAppsList.jsx  ComprehensiveAppsAnalysis.jsx
src/components/charts/: AdvancedBarChart.jsx  AdvancedPieChart.jsx  BarChart.jsx  InsightsChart.jsx  PieChart.jsx
src/components/common/: Section.jsx  StatMini.jsx
src/components/connections/: ConnectionsTables.jsx
src/components/datasets/: DatasetsManager.jsx
src/components/layout/: MiniDrawer.jsx
src/components/overview/: KpiCard.jsx
src/components/settings/: SettingsDialog.jsx
src/components/sidebar/: AppSidebar.jsx  ProSidebar.jsx  SidebarRail.jsx
src/hooks/: useDragAndDrop.js
src/ig/: analysis.js
src/ig/constants/: resultTemplate.js
src/ig/ingestion/: directoryIngestion.js  index.js  zipIngestion.js
src/pages/: AdsPage.jsx  AppsPage.jsx  ConnectionsPage.jsx  InsightsPage.jsx  LinkHistoryPage.jsx  LoggedInformationPage.jsx  MessagesPage.jsx  OverviewPage.jsx  PersonalPage.jsx  PreferencesPage.jsx  SecurityPage.jsx  ThreadsPage.jsx  index.js
src/storage/: datasets.js
src/styles/: GlobalStyles.js
src/theme/: ThemeProvider.jsx
(+12 files in other folders)
