[package]
name = "peeksta"
version = "0.1.0"
description = "Peeksta desktop and mobile app"
authors = ["ireddragonicy"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"


